argocd/argocd-deny-app-in-arbitrarily-projects/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: argocddenyappinarbitrarilyprojects
spec:
  crd:
    spec:
      names:
        kind: ArgocdDenyAppInArbitrarilyProjects
      validation:
        openAPIV3Schema:
          properties:
            projects:
              description: Array of deny projects.
              items:
                type: string
              type: array
  targets:
  - libs:
    - |-
      package lib.core

      default is_gatekeeper = false

      is_gatekeeper {
        has_field(input, "review")
        has_field(input.review, "object")
      }

      resource = input.review.object {
        is_gatekeeper
      }

      resource = input {
        not is_gatekeeper
      }

      format(msg) = {"msg": msg}

      format_with_id(msg, id) = msg_fmt {
        msg_fmt := {
          "msg": sprintf("%s: %s", [id, msg]),
          "details": {"policyID": id},
        }
      }

      apiVersion = resource.apiVersion

      name = resource.metadata.name

      kind = resource.kind

      labels = resource.metadata.labels

      annotations = resource.metadata.annotations

      gv := split(apiVersion, "/")

      group = gv[0] {
        contains(apiVersion, "/")
      }

      group = "core" {
        not contains(apiVersion, "/")
      }

      version := gv[count(gv) - 1]

      has_field(obj, field) {
        not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) {
        obj[field] == ""
      }

      missing_field(obj, field) {
        not has_field(obj, field)
      }
    rego: |-
      package argocd.deny_app_in_arbitrarily_projects

      import data.lib.core

      violation[{"msg": msg}] {
        name := core.resource.metadata.name
        provided := core.resource.spec.project
        denied := {project | project := input.parameters.projects[_]}
        denied_concat := concat(",", denied)
        denied[_] == provided
        msg := sprintf("Error: ArgoCD Application %s is not permitted to use ArgoCD project [%s].", [name, denied_concat])
      }
    target: admission.k8s.gatekeeper.sh
status: {}
